--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<span class="btn" type="5">CE</span>
 					</td>
 					<td>
-						<span class="btn">%</span>
+						<span class="btn percentage">%</span>
 					</td>
 					<td>
 						<span class="btn" type="2">/</span>
